--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
-    "react-icons": "^5.2.0"
+    "react-icons": "^5.2.0",
+    "recharts": "^2.12.6"
   },
   "devDependencies": {
     "@types/node": "^20",
